# prettydiff

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: basic.rs  lcs.rs  lib.rs  main.rs  text.rs
