[package]
name = "prettydiff"
version = "0.1.0"
authors = ["Roman Koblov <penpen938@me.com>"]
edition = "2018"
description = "Side-by-side diff for two files"
categories = ["text-processing"]
keywords = ["diff", "text", "compare", "changes"]
license = "MIT"
readme = "README.md"

[dependencies]
prettytable-rs = "0.8.0"
ansi_term = "0.9"
difference = "2.0"
structopt = "0.2"

