[package]
name = "prettydiff"
version = "0.5.0"
authors = ["Roman Koblov <penpen938@me.com>"]
edition = "2018"
description = "Side-by-side diff for two files"
categories = ["text-processing"]
keywords = ["diff", "text", "compare", "changes"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romankoblov/prettydiff"
homepage = "https://github.com/romankoblov/prettydiff"

[dependencies]
prettytable-rs = "0.8.0"
ansi_term = "0.9"
structopt = { version = "0.2", optional = true }

[features]
cli = ["structopt"]
default = ["cli"]
