[[bin]]
name = "prettydiff"
required-features = ["cli"]

[package]
name = "prettydiff"
version = "0.6.1"
authors = ["Roman Koblov <penpen938@me.com>"]
edition = "2018"
description = "Side-by-side diff for two files"
categories = ["text-processing"]
keywords = ["diff", "text", "compare", "changes"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romankoblov/prettydiff"
homepage = "https://github.com/romankoblov/prettydiff"

[dependencies]
ansi_term.version = "0.12"
prettytable-rs.version = "0.8.0"
structopt.version = "0.3"

prettytable-rs.optional = true
structopt.optional = true

[features]
cli = ["prettytable-rs", "structopt"]
default = ["cli"]
